2010-07-16  Marek Habersack  <mhabersack@novell.com>

	* Login.cs, PasswordRecovery.cs: implemented RenderOuterTable
	(4.0)

	* FormViewRow.cs: added internal property RenderJustCellContents
	which makes the control render only its children (4.0)

	* FormView.cs: implemented RenderOuterTable property and the
	ModifiedOuterTableStylePropertyName method (4.0)

2010-07-15  Marek Habersack  <mhabersack@novell.com>

	* WebControl.cs: implemented verifying that no inline style
	property is set for controls which support the RenderOuterTable
	property (4.0)

	* IRenderOuterTable.cs: internal helper interface for controls
	which support the RenderOuterTable property (for now only
	ChangePassword, 3 more to come)

	* ChangePassword.cs: implemented RenderOuterTable property and the
	corresponding behavior of not rendering surrounding table when the
	property is set to false (4.0).
	Modified BaseChangePasswordContainer to not inherit from Table
	anymore. Table is an instance variable (always used as the
	template container in 2.0) which is optionally (and by default)
	used to contain the templates.

	* PlaceHolder.cs, View.cs, WizardStepBase: added EnableTheming
	property

	* MultiViewControlBuilder.cs: added

2010-07-14  Marek Habersack  <mhabersack@novell.com>

	* Menu.cs: fixed skip link rendering (no child controls are added
	in the process, writing directly to HtmlTextWriter). Fixes tests
	for 4.0
	If StaticSubMenuIndent equals Unit.Empty on 4.0, default to using
	16px as the value of the margin-left CSS attribute.

2010-07-13  Marek Habersack  <mhabersack@novell.com>

	* BoundField.cs: implemented HtmlEncodeFormatString property
	(3.5+) and modified the way FormatDataValue works accordingly.

	* ListBox.cs, CheckBoxList.cs, ListControl.cs: VerifyMultiSelect
	is not part of the official API. MultiSelect capability validation
	is performed using an internal virtual method MultiSelectOk ().

	* BaseDataList.cs: OnPagePreLoad is not part of the official API
